# file-classifer

./: .gitignore  .gitmodules  CMakeLists.txt  file_classifier_config.yaml  test.cpp  vocab_usage.md
models/: convert.py
python/: extract.py
src/: classifier.h  main.cpp  mainwindow.cpp  mainwindow.h  python_extractor.cpp  python_extractor.h  run_config.h  text_processor.cpp  text_processor.h
